--- a/about-us.html
+++ b/about-us.html
@@ -457,35 +457,43 @@
             </div>
         </section>
         <!-- about us -->
-        <section class="container-fluid my-5 pb-5">
+        <section id="about-us" class="container-fluid my-5 pb-5">
             <div class="container pt-5 pt-md-5 pt-lg-0">
                 <div class="row g-5">
                     <div class="col-12 col-md-12 col-lg-5">
-                        <div class="d-flex justify-content-start align-items-center w-100 ">
-                            <iframe width="510" height="287"
-                                src="https://www.youtube.com/embed/MRQ8W0yrcOI?loop=1&playlist=MRQ8W0yrcOI"
-                                title="Ideal Play Abacus India - 20 Years of Excellence" allowfullscreen>
-                            </iframe>
+                        <div class="about-video-wrapper w-100">
+                            <div class="youtube-container">
+                                <img src="https://img.youtube.com/vi/MRQ8W0yrcOI/hqdefault.jpg"
+                                    alt="Ideal Play Abacus India - 23 Years of Excellence" loading="lazy"
+                                    class="youtube-thumb" width="480" height="360">
+                                <a target="_blank" rel="noopener noreferrer" href="https://youtu.be/XvV8f_1mJIQ"
+                                    class="video-play-btn">
+                                    <i class="bi bi-play-fill"></i>
+                                </a>
+                            </div>
+                            <div class="experience-badge">
+                                <span class="number">23</span>
+                                <span class="text">Years of<br>Excellence</span>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-12 col-lg-7">
                         <div class="d-flex justify-content-center align-items-start flex-column w-100 h-100">
-                            <h6>ABOUT US?</h6>
-                            <h2 class="learn-t">Ideal Play Abacus India Private Limited</h2>
-                            <p>(IPA) was founded in 2003 by
-                                women entrepreneurs to develop the mathematical and brain skills of young children using
-                                the magic toolabacus. Over the past 18 years, IPA has expanded across
-                                several states in India and abroad, offering abacus maths and
-                                abacus mathematics programs.
-
-                                With over 1500++ centers across India and more than 4,00,000+ students, IPA is a trusted
-                                name in abacus education. We also offer programs in countries like the
-                                USA, UAE, Australia, South Africa, and more, making abacus learning
-                                accessible worldwide.
-
-                                Explore the power of abacus mastermind, abacus Global,
-                                and childs abacus training with IPA.
+                            <h6 class="about-sub-t">ABOUT US​</h6>
+                            <h2 class="learn-t mb-4">Ideal Play Abacus India Private Limited</h2>
+                            <p class="about-p"><strong>Ideal Play Abacus India (IPA)</strong> was founded in 2003 with a
+                                vision to revolutionize brain and math skills in children using the power of the abacus.
                             </p>
+                            <p class="about-p">Today, we are proud to be a global leader in skill-based education,
+                                offering specialized programs like <strong>Abacus Maths, Abacus Mastermind, and Arka
+                                    Kids</strong>. With a vast network of <strong>1500+ centers</strong> and over
+                                <strong>4,00,000 students</strong> trained, we continue to shape young minds across
+                                India and abroad.
+                            </p>
+
+                            <a href="contact-us.html" class="theme-btn-2 mt-4" role="button">
+                                <span class="text">CONTACT US</span>
+                            </a>
                         </div>
                     </div>
                 </div>
