--- a/events.html
+++ b/events.html
@@ -357,37 +357,73 @@
         </nav>
 
     </header>
-    <main style="overflow:hidden" class="w-100">
+    <main class="w-100 overflow-hidden-x">
+        <!-- banner -->
         <!-- banner -->
         <section id="banner" class="container-fluid pt-0 pt-md-0">
             <div class="row">
                 <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/6.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Abacus Learning Events</h1>
-                                        <p>Join our interactive abacus events across India, designed to
-                                            enhance your childs mental arithmetic skills, boost their
-                                            confidence, and improve their abacus maths abilities.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">Events</li>
+                    <!-- Modern Hero Section -->
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
+                        <div class="hero-shape shape-3"></div>
+
+                        <div class="container py-4">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content position-relative">
+                                        <div
+                                            class="badge bg-light text-primary fw-bold px-3 py-2 rounded-pill mb-3 shadow-sm fade-in-up">
+                                            <i class="fa-solid fa-star me-2"></i>Upcoming Events
+                                        </div>
+                                        <h1 class="display-4 fw-bold mb-4 text-dark fade-in-up delay-1">
+                                            Abacus <span class="text-gradient">Events & Competitions</span>
+                                        </h1>
+                                        <p class="lead text-muted mb-4 fade-in-up delay-2">
+                                            Join our interactive abacus events across India, designed to enhance your
+                                            child's mental arithmetic skills and boost their confidence.
+                                        </p>
+
+                                        <!-- Breadcrumb -->
+                                        <nav aria-label="breadcrumb"
+                                            class="fade-in-up delay-2 mb-4 d-flex justify-content-center justify-content-lg-start">
+                                            <ol class="breadcrumb bg-white shadow-sm px-4 py-2 rounded-pill">
+                                                <li class="breadcrumb-item"><a href="index.html"
+                                                        class="text-decoration-none text-muted"><i
+                                                            class="fa-solid fa-house me-1"></i> Home</a></li>
+                                                <li class="breadcrumb-item active text-primary fw-bold"
+                                                    aria-current="page">Events</li>
                                             </ol>
                                         </nav>
 
+                                        <!-- Actions -->
+                                        <div
+                                            class="d-flex gap-3 flex-wrap justify-content-center justify-content-lg-start fade-in-up delay-3">
+                                            <a href="#competition"
+                                                class="btn theme-btn shadow-sm rounded-pill px-4 py-2 fw-bold">
+                                                View Events <i class="fa-solid fa-arrow-down ms-2"></i>
+                                            </a>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative fade-in-right">
+                                        <div
+                                            class="hero-image-bg position-absolute top-50 start-50 translate-middle bg-primary opacity-10 rounded-circle">
+                                        </div>
+                                        <img src="images/banner/6.webp" alt="Abacus Events"
+                                            class="img-fluid position-relative hero-main-img floating-animation">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -913,18 +949,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -950,7 +992,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center w-100 text-center">
-                            <p class="m-0">Â© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
+                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
                                 reserved.</p>
                         </div>
                     </div>
@@ -964,7 +1006,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script defer src="https://www.playabacusindia.com/js/swiper.js"></script>
+    <script defer src="js/swiper.js"></script>
 
     <!-- custom js -->
     <script defer src="js/script.js"></script>
@@ -1010,7 +1052,8 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm"
+                                        width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -1034,13 +1077,9 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
 
 </html>
-
-
-
-
