--- a/how-to-do-abacus-fast.html
+++ b/how-to-do-abacus-fast.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>How to Do Abacus Fast  Speed Tricks & Techniques | IPA Abacus</title>
+    <title>How to Do Abacus Fast Speed Tricks & Techniques | IPA Abacus</title>
     <meta name="description"
         content="Learn how to do abacus fast with proven abacus speed tricks and mental math techniques. Boost your calculation speed with IPA Abacus!">
     <meta name="keywords"
@@ -142,14 +142,14 @@
             src="https://www.facebook.com/tr?id=4105191913057058&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-17517142887');
-</script>
+        gtag('config', 'AW-17517142887');
+    </script>
 
 </head>
 
@@ -359,34 +359,73 @@
         </nav>
 
     </header>
-    <main style="overflow:hidden" class="w-100">
+    <main class="w-100 overflow-hidden-x">
+        <!-- banner -->
         <!-- banner -->
         <section id="banner" class="container-fluid pt-0 pt-md-0">
             <div class="row">
                 <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="images/banner/9.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Master Speed in Abacus</h1>
-                                        <p>Learn how to do abacus fast using expert techniques that boost your mental
-                                            math speed and accuracy.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">How To Do Abacus
-                                                    Fast</li>
+                    <!-- Modern Hero Section -->
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
+                        <div class="hero-shape shape-3"></div>
+
+                        <div class="container py-4">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content position-relative">
+                                        <div
+                                            class="badge bg-light text-primary fw-bold px-3 py-2 rounded-pill mb-3 shadow-sm fade-in-up">
+                                            <i class="fa-solid fa-star me-2"></i>Speed Tricks & Techniques
+                                        </div>
+                                        <h1 class="display-4 fw-bold mb-4 text-dark fade-in-up delay-1">
+                                            Master Speed in <span class="text-gradient">Abacus</span>
+                                        </h1>
+                                        <p class="lead text-muted mb-4 fade-in-up delay-2">
+                                            Learn how to do abacus fast using expert techniques that boost your mental
+                                            math speed and accuracy.
+                                        </p>
+
+                                        <!-- Breadcrumb -->
+                                        <nav aria-label="breadcrumb"
+                                            class="fade-in-up delay-2 mb-4 d-flex justify-content-center justify-content-lg-start">
+                                            <ol class="breadcrumb bg-white shadow-sm px-4 py-2 rounded-pill">
+                                                <li class="breadcrumb-item"><a href="index.html"
+                                                        class="text-decoration-none text-muted"><i
+                                                            class="fa-solid fa-house me-1"></i> Home</a></li>
+                                                <li class="breadcrumb-item active text-primary fw-bold"
+                                                    aria-current="page">How To Do Abacus Fast</li>
                                             </ol>
                                         </nav>
+
+                                        <!-- Actions -->
+                                        <div
+                                            class="d-flex gap-3 flex-wrap justify-content-center justify-content-lg-start fade-in-up delay-3">
+                                            <a href="#info-new-sec"
+                                                class="btn theme-btn shadow-sm rounded-pill px-4 py-2 fw-bold">
+                                                Start Learning <i class="fa-solid fa-arrow-down ms-2"></i>
+                                            </a>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative fade-in-right">
+                                        <div
+                                            class="hero-image-bg position-absolute top-50 start-50 translate-middle bg-primary opacity-10 rounded-circle">
+                                        </div>
+                                        <img src="images/banner/9.webp" alt="How to Do Abacus Fast"
+                                            class="img-fluid position-relative hero-main-img floating-animation">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -406,7 +445,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-graduation-cap"></i>
                             </div>
@@ -417,7 +457,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-trophy"></i>
                             </div>
@@ -428,7 +469,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-gem"></i>
                             </div>
@@ -525,7 +567,7 @@
                 class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
                 <div class="text-center text-white p-3">
                     <h2 class="display-3 fw-bold">Enroll Your Child in IPA Abacus Today!</h2>
-                    <p>Give your child the competitive edge they deserve with IPA Abacus  Indias trusted name in
+                    <p>Give your child the competitive edge they deserve with IPA Abacus Indias trusted name in
                         abacus education. Whether you're looking for the best abacus classes online or a reputed abacus
                         training centre, we're here to guide your child every step of the way. Lets build confident
                         learners together.</p>
@@ -624,18 +666,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -661,7 +709,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center w-100 text-center">
-                            <p class="m-0">Â© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
+                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
                                 reserved.</p>
                         </div>
                     </div>
@@ -675,7 +723,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script defer src="https://www.playabacusindia.com/js/swiper.js"></script>
+    <script defer src="js/swiper.js"></script>
 
     <!-- custom js -->
     <script defer src="js/script.js"></script>
@@ -721,7 +769,8 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm"
+                                        width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -745,13 +794,7 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
-
-</html>
-
-
-
-
