--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                         <div
                             class="d-flex justify-content-center align-items-center text-center flex-column w-100 course-content-box banner-content-box">
                             <h6>Skill-Based Learning​</h6>
-                            <h2 class="txt-secondary-clr">Popular Courses in India</h2>
+                            <h2 class="text-white">Popular Courses in India</h2>
                             <p class="text-white"> We offer abacus, abacus maths, abacus
                                 mastermind, and childs abacus classes for ages 4–14. Find
                                 expert-led programs near you by searching abacus near me.</p>
@@ -1349,7 +1349,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script defer src="https://www.playabacusindia.com/js/swiper.js"></script>
+    <script defer src="js/swiper.js"></script>
 
     <!-- custom js -->
     <script defer src="js/script.js"></script>
