--- a/abacus-class-near-me.html
+++ b/abacus-class-near-me.html
@@ -562,17 +562,20 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Enroll Your Child in IPA Abacus Today!</h2>
-                    <p>Give your child the competitive edge they deserve with IPA Abacus Indias trusted name in
-                        abacus education. Whether you're looking for the best abacus classes or a reputed abacus
-                        training centre, we're here to guide your child every step of the way. Lets build confident
-                        learners together.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="cta-glass-box text-center p-4 p-md-5">
+                    <h2 class="display-4 fw-bold mb-4">Start Abacus Learning in India Today</h2>
+                    <p class="lead mb-4">Enroll your child in our abacus programs or start abacus franchise in
+                        India today. Become a partner with India’s leading abacus training
+                        provider and help shape young minds!</p>
+                    <div class="d-flex justify-content-center">
+                        <a href="contact-us.html"
+                            class="theme-btn-cta mt-2 text-decoration-none d-inline-flex align-items-center">
+                            <span>Get In Touch</span>
+                            <i class="bi bi-chat-right-text-fill ms-2"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
