--- a/abacus-franchise.html
+++ b/abacus-franchise.html
@@ -616,23 +616,20 @@
             </div>
         </section>
 
-        <section id="cta" class="container-fluid py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div
-                            class="d-flex justify-content-center align-items-center w-100 flex-column gap-3 text-center">
-                            <h2 class="m-0">Ready to Start Your Abacus Franchise?</h2>
-                            <p class="m-0 max-w-800 mx-auto">Apply now for Andhra Pradesh, Gujarat, Karnataka, Kerala,
-                                Maharashtra,
-                                Punjab, Rajasthan, Tamil Nadu, Telangana, West Bengal, Andaman & Nicobar Islands, and
-                                Delhi. Our team will call to share detailed program and investment information.</p>
-                            <div class="d-flex justify-content-center align-items-center gap-3 mt-3">
-                                <button onclick="msgBox()"
-                                    class="btn btn-success fw-bold rounded-pill px-5 py-3 apply-btn shadow">Apply for
-                                    Franchise</button>
-                            </div>
-                        </div>
+        <!-- cta -->
+        <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="cta-glass-box text-center p-4 p-md-5">
+                    <h2 class="display-4 fw-bold mb-4">Start Abacus Learning in India Today</h2>
+                    <p class="lead mb-4">Enroll your child in our abacus programs or start abacus franchise in
+                        India today. Become a partner with India’s leading abacus training
+                        provider and help shape young minds!</p>
+                    <div class="d-flex justify-content-center">
+                        <a href="contact-us.html"
+                            class="theme-btn-cta mt-2 text-decoration-none d-inline-flex align-items-center">
+                            <span>Get In Touch</span>
+                            <i class="bi bi-chat-right-text-fill ms-2"></i>
+                        </a>
                     </div>
                 </div>
             </div>
