--- a/franchise.html
+++ b/franchise.html
@@ -810,15 +810,16 @@
             </div>
         </section>
         <!-- cta -->
+        <!-- cta -->
         <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
             <div class="container d-flex justify-content-center align-items-center">
                 <div class="cta-glass-box text-center p-4 p-md-5">
-                    <h2 class="display-4 fw-bold mb-4">Start Your <span class="text-warning">Abacus Franchise
-                            Today</span></h2>
-                    <p class="lead mb-4">Become a part of India's leading abacus training provider. Enroll your child or
-                        join us as a franchise partner to spread the power of abacus learning across India.</p>
+                    <h2 class="display-4 fw-bold mb-4">Start Abacus Learning in India Today</h2>
+                    <p class="lead mb-4">Enroll your child in our abacus programs or start abacus franchise in
+                        India today. Become a partner with India’s leading abacus training
+                        provider and help shape young minds!</p>
                     <div class="d-flex justify-content-center">
-                        <a href="contact-us.html" id="chat-box"
+                        <a href="contact-us.html"
                             class="theme-btn-cta mt-2 text-decoration-none d-inline-flex align-items-center">
                             <span>Get In Touch</span>
                             <i class="bi bi-chat-right-text-fill ms-2"></i>
